--- a/multiples/multiples/Base.lproj/Main.storyboard
+++ b/multiples/multiples/Base.lproj/Main.storyboard
@@ -3,6 +3,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
@@ -16,11 +17,61 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="chalkboard-bg" translatesAutoresizingMaskIntoConstraints="NO" id="X2Z-c0-Fbi">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                            </imageView>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="What multiple to add by?" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="yUK-Si-1gw">
+                                <rect key="frame" x="152" y="413" width="296" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="296" id="eiL-sY-EDD"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5hd-LU-eKR">
+                                <rect key="frame" x="225" y="466" width="150" height="47"/>
+                                <color key="backgroundColor" red="0.98431372549019602" green="0.12549019607843137" blue="0.047058823529411764" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="47" id="ag8-G3-1zH"/>
+                                    <constraint firstAttribute="width" constant="150" id="b3e-ed-Ho6"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="30"/>
+                                <state key="normal" title="Play">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                            </button>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="t479QX1450494744" translatesAutoresizingMaskIntoConstraints="NO" id="6Up-Xw-1aG">
+                                <rect key="frame" x="180" y="15" width="240" height="128"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="240" id="GHs-hA-hKm"/>
+                                    <constraint firstAttribute="height" constant="128" id="vfy-bn-lGH"/>
+                                </constraints>
+                            </imageView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="5hd-LU-eKR" firstAttribute="centerX" secondItem="6Up-Xw-1aG" secondAttribute="centerX" id="Baa-Uk-YUv"/>
+                            <constraint firstItem="yUK-Si-1gw" firstAttribute="centerX" secondItem="6Up-Xw-1aG" secondAttribute="centerX" id="DDE-bg-Wjg"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="X2Z-c0-Fbi" secondAttribute="trailing" constant="-20" id="R5J-b3-A1q"/>
+                            <constraint firstItem="5hd-LU-eKR" firstAttribute="top" secondItem="yUK-Si-1gw" secondAttribute="bottom" constant="23" id="Zis-5e-DCV"/>
+                            <constraint firstItem="6Up-Xw-1aG" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="a9j-PY-N20"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="5hd-LU-eKR" secondAttribute="bottom" constant="87" id="oa0-HH-Ijm"/>
+                            <constraint firstItem="6Up-Xw-1aG" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="topMargin" constant="15" id="pP9-bV-ZM9"/>
+                            <constraint firstItem="X2Z-c0-Fbi" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="topMargin" id="uxk-fz-0wQ"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="5hd-LU-eKR" secondAttribute="bottom" constant="90" id="vFm-Wy-oMi"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="X2Z-c0-Fbi" secondAttribute="bottom" id="y16-H8-7KX"/>
+                            <constraint firstItem="X2Z-c0-Fbi" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="-20" id="zkv-E5-TvA"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="245" y="337"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="chalkboard-bg" width="1280" height="1600"/>
+        <image name="t479QX1450494744" width="436" height="77"/>
+    </resources>
 </document>
