--- a/multiples/multiples/Base.lproj/Main.storyboard
+++ b/multiples/multiples/Base.lproj/Main.storyboard
@@ -21,16 +21,23 @@
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="chalkboard-bg" translatesAutoresizingMaskIntoConstraints="NO" id="X2Z-c0-Fbi">
                                 <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                             </imageView>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="What multiple to add by?" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="yUK-Si-1gw">
-                                <rect key="frame" x="152" y="413" width="296" height="30"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="t479QX1450494744" translatesAutoresizingMaskIntoConstraints="NO" id="6Up-Xw-1aG" userLabel="logo">
+                                <rect key="frame" x="180" y="15" width="240" height="128"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="240" id="GHs-hA-hKm"/>
+                                    <constraint firstAttribute="height" constant="128" id="vfy-bn-lGH"/>
+                                </constraints>
+                            </imageView>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="What multiple to add by?" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="yUK-Si-1gw" userLabel="inputMultiplyNumber">
+                                <rect key="frame" x="152" y="410" width="296" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="296" id="eiL-sY-EDD"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
-                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5hd-LU-eKR">
-                                <rect key="frame" x="225" y="466" width="150" height="47"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5hd-LU-eKR" userLabel="playButton">
+                                <rect key="frame" x="225" y="463" width="150" height="47"/>
                                 <color key="backgroundColor" red="0.98431372549019602" green="0.12549019607843137" blue="0.047058823529411764" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="47" id="ag8-G3-1zH"/>
@@ -40,14 +47,10 @@
                                 <state key="normal" title="Play">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
+                                <connections>
+                                    <action selector="playGame:" destination="BYZ-38-t0r" eventType="touchUpInside" id="9ns-Ws-wIP"/>
+                                </connections>
                             </button>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="t479QX1450494744" translatesAutoresizingMaskIntoConstraints="NO" id="6Up-Xw-1aG">
-                                <rect key="frame" x="180" y="15" width="240" height="128"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="240" id="GHs-hA-hKm"/>
-                                    <constraint firstAttribute="height" constant="128" id="vfy-bn-lGH"/>
-                                </constraints>
-                            </imageView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
@@ -63,7 +66,17 @@
                             <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="X2Z-c0-Fbi" secondAttribute="bottom" id="y16-H8-7KX"/>
                             <constraint firstItem="X2Z-c0-Fbi" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="-20" id="zkv-E5-TvA"/>
                         </constraints>
+                        <variation key="default">
+                            <mask key="constraints">
+                                <exclude reference="oa0-HH-Ijm"/>
+                            </mask>
+                        </variation>
                     </view>
+                    <connections>
+                        <outlet property="inputMultiplyNumber" destination="yUK-Si-1gw" id="zMw-Gr-bVp"/>
+                        <outlet property="logo" destination="6Up-Xw-1aG" id="Ncb-bi-8GS"/>
+                        <outlet property="playButton" destination="5hd-LU-eKR" id="gVG-8h-9An"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
